# Computer-Graphics

./: README.md
01 - Projections/: main.cpp
02 - Ellipsoid/: main.cpp  point.cpp
03 - Rasterization/: Buffer.cpp  Buffer.h  Edge.cpp  Edge.h  Point.cpp  Point.h
04 - Clipping/: Polygon.cpp  WeilerAtherton.cpp
05 - Animation & Light & Texture/: CMakeLists.txt
06 - Optimizations/: FPS.cpp  optimization.h  point.h
07 - Shaders/: JsonConfig.cpp  JsonConfig.h  config.json  ellipsoid.h  fragmentSader.txt  include.h  main.cpp  point.cpp  vertexShader.txt
Animation & Light & Texture/: JsonConfig.h  ellipsoid.cpp  ellipsoid.h  main.cpp
Clipping/: Point.cpp  Point.h  Polygon.h  WeilerAtherton.h  main.cpp
Ellipsoid/: ellipsoid.cpp  ellipsoid.h  point.h
Optimizations/: CMakeLists.txt  FPS.h  ellipsoid.cpp  main.cpp
Rasterization/: Polygon.cpp  Polygon.h  main.cpp
Shaders/: ellipsoid.cpp  fragmentSader.txt  include.h  optimization.h  point.h  shader.cpp  shader.h  tosave.json  vertexShader.txt
