cmake_minimum_required(VERSION 3.8)
project(Lab3)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -framework OpenGl")
set(CMAKE_CXX_STANDARD 11)
set(GLFW_USE_CHDIR)
set(GLFW_USE_MENUBAR)
set(GLFW_USE_RETINA)
set(SOURCE_FILES main.cpp ellipsoid.h ellipsoid.cpp point.h point.cpp JsonConfig.cpp JsonConfig.h FPS.cpp FPS.h optimization.h)

add_executable(Lab3 ${SOURCE_FILES} ellipsoid.h ellipsoid.cpp FPS.cpp FPS.h optimization.h)
target_link_libraries(Lab3 GLEW GLFW SDL2)
set(Boost_USE_STATIC_LIBS        ON)
set(Boost_USE_MULTITHREADED      ON)
set(Boost_USE_STATIC_RUNTIME    OFF)
find_package(Boost 1.57.0 COMPONENTS date_time filesystem system ...)
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    add_executable(foo foo.cc JsonConfig.cpp JsonConfig.h)
    target_link_libraries(foo ${Boost_LIBRARIES})
endif()